--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="caixa-principal">
         <h1>Você decide o futuro do IA</h1>
         <div class="caixa-perguntas">
-            Você já sabe quais são as perguntas que irão nortear sua missão ?
+            professora valdete é a melhor ?
         </div>
         <div class="caixa-alternativas">
-            <button>Sim, eu já sei</button>
-            <button>Não, estou ajustando algumas coisas</button>
+            <button>com certeza </button>
+            <button>sim</button>
         </div>
         <div class="caixa-resultado">
             <p class="texto-resultado">
