--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Você decide o futuro da IA</title>
+    <title>agora fique gente boa</title>
 </head>
 <body>
     <div class="caixa-principal">
@@ -18,7 +18,7 @@
         </div>
         <div class="caixa-resultado">
             <p class="texto-resultado">
-                E o seu texto final, já está pronto ?
+                só ela é capaz de aguentar o terceirão de CCM EDITE
             </p>
         </div>
     </div>
