--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="caixa-principal">
-        <h1>Você decide o futuro do IA</h1>
+        <h1>agora vire um gente boa</h1>
         <div class="caixa-perguntas">
             professora valdete é a melhor ?
         </div>
